--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,10 +1,23 @@
 .navbar {
     display: flex;
-    flex-wrap: nowrap;
-    justify-content: left;
-}
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5em;
+    background-color: #3f83e1;
+    border-bottom: 1px solid #e7e7e7;
+    border-radius: 0;
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.05);
+    margin-bottom: 20px;
+    padding: 0;
+    }
 
 .navbar_item {
-    flex-basis: 20%;
+    display: flex;
+    align-items: center;
+    padding: 0.5em;
+    font-size: 1.2em;
+    font-weight: bold;
     list-style-type: none;
-}
+    color: #e7e7e7;
+    text-decoration: none;
+    }
