--- a/src/components/part/Part.css
+++ b/src/components/part/Part.css
@@ -9,6 +9,6 @@
       flex-basis: 28%;
       margin: 1em;
       padding: 1em;
-      border: 1px solid goldenrod;
+      /* border: 1px solid goldenrod; */
         width: 300px;
   }
