--- a/src/components/part/PartList.css
+++ b/src/components/part/PartList.css
@@ -11,3 +11,16 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+
+.section-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.parts {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
