build css updated

--- a/src/components/builder/Builder.css
+++ b/src/components/builder/Builder.css
@@ -1,9 +1,9 @@
 
-.builders {
+.card_builder {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
   }
   
   .builder {
