--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,21 +1,13 @@
-.navbar-whole {
-    display: flex;
-    background-color: #0062ff;
-    height: 35px;
-    margin: 0;
-}
-
-.navbar__links {
-    display: flex;
-    align-items: center;
-    padding: 0.5em;
-    font-size: 1.2em;
-    font-weight: bold;
-    list-style-type: none;
-    color: #e7e7e7;
-    text-decoration: none;
-    }
-
 .navbar_item {
     padding: 0 0.5em;
+    list-style: none;
     }
+
+.Nav.Link {
+    margin: 1000;
+    }
+
+.navbar_custom {
+    height: 90px;
+    }
+
