--- a/src/components/part/PartForm.css
+++ b/src/components/part/PartForm.css
@@ -1,4 +1,4 @@
-fieldset {
+/* fieldset {
     max-width: 40em;
     padding: 4px;
     margin: 2em auto;
@@ -79,4 +79,4 @@ h2 {
 
 div {
     padding-top: 2%;
-}
+} */
