--- a/src/components/userBuild/UserBuildForm.css
+++ b/src/components/userBuild/UserBuildForm.css
@@ -1,4 +1,4 @@
-fieldset {
+/* fieldset {
     max-width: 40em;
     padding: 4px;
     margin: 2em auto;
@@ -60,4 +60,4 @@ fieldset input, fieldset button, fieldset select {
 
 fieldset .alignRight {
     text-align: right;
-}
+} */
