--- a/src/components/part/Part.css
+++ b/src/components/part/Part.css
@@ -12,16 +12,16 @@
         width: 300px;
   }
 
-  .part-image {
-      max-width: 200px;
-      min-height: 50px;
+  .partImage {
+      /* max-width: 200px; */
+      max-width: 220px;
+      max-height: 170px;
       margin: 0 auto;
+      padding-top: 2%;
       display: flex;
       justify-content: center;
       align-content: center;
-      border: 1px solid rgb(0, 94, 255);
       background-color: #ffffff;
-      margin-bottom: 5%;
   }
 
   .card-content {
@@ -37,5 +37,42 @@
 
   .part-button {
     margin-bottom: 0;
-    
+  }
+
+  .partContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .part-button-link {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    margin: 0 auto;
+  }
+
+  .part-button-link1 button {
+    /* margin: 0 auto; */
+    min-width: 110px;
+    max-height: 40px;
+  }
+
+  .part-button-link2 button {
+    margin: 0 auto;
+    min-width: 110px;
+    max-height: 40px;
+  }
+
+  .delPart {
+    /* margin: 0 auto; */
+    min-width: 100px;
+    max-height: 40px;
+    max-width: 110px;
+  }
+
+  .partStack {
+    display: flex;
+    justify-content: center;
   }
